Bilingual interface requested changes

--- a/front/src/styles/DataAnalyticsReport.module.css
+++ b/front/src/styles/DataAnalyticsReport.module.css
@@ -113,6 +113,11 @@
 
 .bicleanerScores {
   margin-bottom: 40px;
+  margin-right: 20px;
+  width: 100%;
+}
+.anotherContainer {
+  display: flex;
 }
 
 .bicleanerScores h2 {
