--- a/front/src/styles/DomainTable.module.css
+++ b/front/src/styles/DomainTable.module.css
@@ -1,16 +1,6 @@
 .topDomains {
   margin-right: 30px;
 }
-.dataReportContainer .topDomains table thead th,
-.dataReportContainer .topDomains table tr td {
-  padding: 5px 30px 5px 8px;
-  font-size: 14px;
-}
-
-.dataReportContainer .topDomains table thead th:first-of-type,
-.dataReportContainer .topDomains table tr td:first-of-type {
-  min-width: 60px;
-}
 .domainLink {
   text-decoration: none;
   color: var(--desc-link-color);
@@ -19,10 +9,12 @@
   margin-right: 30px;
   margin-bottom: 20px;
 }
-
+.bilingualTable h2 {
+  font-size: 20px;
+}
 .bilingualTable table th,
 .bilingualTable table td {
-  padding: 3px 10px;
+  padding: 5px 10px !important;
 }
 
 .bilingualTable table th span,
