Added monday corrections hbs, margin in target stats table, bilingual collections graph label

--- a/front/src/styles/DataAnalyticsReport.module.css
+++ b/front/src/styles/DataAnalyticsReport.module.css
@@ -226,7 +226,12 @@
 /* NGRMS*/
 
 /******** volumes table ****/
-
+.volumes {
+  width: fit-content;
+}
+.targetTable {
+  margin-left: auto;
+}
 .dataReportContainer table {
   text-align: left;
   border-collapse: collapse;
