--- a/front/src/styles/DataAnalyticsReport.module.css
+++ b/front/src/styles/DataAnalyticsReport.module.css
@@ -241,11 +241,27 @@
 .dataReportContainer table thead tr {
   border: 1px solid rgb(197, 211, 237);
 }
+.dataReportContainer table thead th {
+  padding: 5.5px 8px;
+}
 
-.dataReportContainer table thead th,
+.dataReportContainer table thead th:first-child {
+  padding: 5.5px 8px 5.5px 10px;
+}
 .dataReportContainer table tr td {
-  padding: 7px;
   font-size: 14px;
+  padding: 2.6px 8px;
+}
+
+.dataReportContainer table tr td:first-child {
+  padding: 2.6px 8px 2.6px 10px;
+}
+.dataReportContainer table thead th:last-child {
+  padding: 5.5px 10px 5.5px 8px;
+}
+
+.dataReportContainer table tr td:last-child {
+  padding: 2.6px 10px 2.6px 8px;
 }
 
 .dataReportContainer table thead th {
@@ -270,10 +286,13 @@
   align-items: center;
   margin-bottom: 10px;
 }
-
 .helpCircle {
-  margin-left: 10px;
-  margin-bottom: -3px;
+  margin-left: 4px;
+  margin-bottom: -5px;
+}
+.helpCircleSmall {
+  margin-left: 2px;
+  margin-bottom: -4px;
 }
 
 .langDocsContainer {
