--- a/front/src/styles/DataAnalyticsReport.module.css
+++ b/front/src/styles/DataAnalyticsReport.module.css
@@ -5,7 +5,6 @@
 }
 
 .dataReportContainer {
-  margin-top: 40px;
   color: var(--main-copy);
 }
 
@@ -236,56 +235,54 @@
   text-align: left;
   border-collapse: collapse;
   margin: 5px 0 20px 0;
+  border-radius: 3px;
 }
 
-.dataReportContainer table thead tr {
-  border: 1px solid rgb(197, 211, 237);
-}
 .dataReportContainer table thead th {
-  padding: 5.5px 8px;
+  background-color: #2c3452;
+  padding: 12px 8px;
+  color: white;
 }
 
 .dataReportContainer table thead th:first-child {
-  padding: 5.5px 8px 5.5px 10px;
+  padding: 10px 8px 10px 14px;
 }
 .dataReportContainer table tr td {
   font-size: 14px;
-  padding: 4px 8px;
+  padding: 10px 8px;
 }
 
 .dataReportContainer table tr td:first-child {
-  padding: 4px 8px 4px 10px;
+  padding: 10px 8px 10px 14px;
 }
 .dataReportContainer table thead th:last-child {
-  padding: 5.5px 10px 5.5px 8px;
+  padding: 10px 14px 10px 8px;
 }
 
 .dataReportContainer table tr td:last-child {
-  padding: 4px 10px 4px 8px;
+  padding: 10px 14px 10px 8px;
 }
 
 .dataReportContainer table thead th {
-  font-weight: 500;
+  font-weight: bold;
 }
 .dataReportContainer table {
   border: 1px solid #eeeeee;
 }
 .dataReportContainer table thead {
-  background-color: #022831;
-  color: white;
-  border: 1px solid #dde1e2;
+  color: #333333;
+  border-bottom: 1px solid #dde1e2;
 }
 
 .dataReportContainer table tr td a {
   color: rgb(1, 95, 236);
   text-decoration: none;
 }
-
-.dataReportContainer table tr {
-  padding: 0 12px;
+.dataReportContainer table tr td {
+  color: #666666;
 }
-.dataReportContainer table tbody tr:nth-of-type(even) {
-  background-color: #e3f2f8;
+.dataReportContainer table tr {
+  border-bottom: 1px solid #f2f2f2;
 }
 
 .bicleanerScores h2 {
