--- a/front/src/styles/DataAnalyticsReport.module.css
+++ b/front/src/styles/DataAnalyticsReport.module.css
@@ -239,11 +239,11 @@
 }
 
 .dataReportContainer table thead th {
-  background-color: #2c3452;
   padding: 12px 8px;
-  color: white;
 }
-
+.dataReportContainer table thead tr {
+  border-bottom: 1.5px solid #5e5d5d;
+}
 .dataReportContainer table thead th:first-child {
   padding: 10px 8px 10px 14px;
 }
@@ -271,7 +271,6 @@
 }
 .dataReportContainer table thead {
   color: #333333;
-  border-bottom: 1px solid #dde1e2;
 }
 
 .dataReportContainer table tr td a {
@@ -281,8 +280,8 @@
 .dataReportContainer table tr td {
   color: #666666;
 }
-.dataReportContainer table tr {
-  border-bottom: 1px solid #f2f2f2;
+.dataReportContainer table tr:not(:last-child) {
+  border-bottom: 1px solid #5e5d5d;
 }
 
 .bicleanerScores h2 {
