--- a/front/src/styles/RegisterLabels.module.css
+++ b/front/src/styles/RegisterLabels.module.css
@@ -1,4 +1,11 @@
-.registerLabelsGraph {
-  height: 400px;
-  display: flex;
+.legendListStacked {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  list-style-type: none;
+  width: fit-content;
+  margin-left: 30px;
+}
+
+.legendListStacked li {
+  margin: 3px 16px 7px 0;
 }
