--- a/front/src/styles/ReportScores.module.css
+++ b/front/src/styles/ReportScores.module.css
@@ -1,5 +1,10 @@
-.reportScoresContainer {
+.reportScoresContainer,
+.documentScoresContainer {
   height: 300px;
+}
+
+.documentScoresContainer {
+  margin-bottom: 60px;
 }
 
 .tooltipOverlap {
@@ -16,6 +21,14 @@
 .label {
   font-weight: 600;
   margin-bottom: 12px;
+}
+
+.title {
+  display: flex;
+}
+
+.title h3 {
+  margin-right: 5px;
 }
 
 .desc {
@@ -58,6 +71,7 @@
   margin-left: auto;
   margin-bottom: 5px;
 }
+
 .reportTitleSmall {
   width: 98%;
 }
