--- a/front/src/styles/Sample.module.css
+++ b/front/src/styles/Sample.module.css
@@ -28,20 +28,10 @@
     0 3px 7px -3px rgba(0, 0, 0, 0.137);
   overflow-y: auto;
 }
-.sampleContent,
+/* .sampleContent,
 .sampleContentRTL {
-  box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-  padding: 18px;
-  height: calc(100% - 140px);
-  position: aboslute;
-  overflow-y: auto;
-  box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-  padding: 18px;
-  max-height: calc(100% - 140px);
-  position: aboslute;
-  overflow-y: auto;
-  height: fit-content;
-}
+ 
+} */
 .sampleContentRTL {
   direction: rtl;
 }
@@ -59,7 +49,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
   bottom: 15px;
   width: 100%;
 }
@@ -74,4 +63,35 @@
 .closeSampleBtn:hover {
   color: rgb(207, 13, 13);
   transition: all 0.2s;
+}
+.srcSentence,
+.trgSentence {
+  box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.144);
+  padding: 9px 10px 9px 7px;
+  max-height: calc(100% - 140px);
+  position: aboslute;
+  overflow-y: auto;
+  height: fit-content;
+  display: flex;
+  border-radius: 3px;
+  align-items: center;
+}
+.trgSentence {
+  background-color: rgba(128, 128, 128, 0.117);
+}
+
+.srcTag,
+.trgTag {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 18px;
+  color: rgba(207, 13, 13, 0.384);
+  margin-right: 15px;
+}
+.trgTag {
+  color: rgba(13, 207, 117, 0.384);
+}
+.stripe {
+  color: #e0eefb5d;
+  margin: 9px 0;
 }
