Saving issue WIP to retrieve changes from backend

--- a/front/src/styles/Home.module.css
+++ b/front/src/styles/Home.module.css
@@ -1,6 +1,8 @@
 .viewerContainer {
+  margin: 10px auto;
   padding: 10px 60px 40px 60px;
   color: var(--main-copy);
+  max-width: 1400px;
 }
 
 .failedWarning {
