--- a/front/src/styles/RegisterLabels.module.css
+++ b/front/src/styles/RegisterLabels.module.css
@@ -10,7 +10,31 @@
 
 .graph-cont {
   height: 400px;
-  width: 49%;
+  width: 25%;
+  margin-right: 70px
+}
+
+.graph-cont-bars {
+  width: 69%;
+  height: 400px;
+}
+
+.title {
+  display: flex;
+}
+
+.title h2 {
+  margin-right: 7px;
+  margin-top: -1px
+}
+
+.tooltipLink {
+  color: var(--tooltip-link);
+  text-decoration: none;
+}
+
+.tooltipText {
+  font-size: 16px;
 }
 
 .mtInfo {
