--- a/front/src/styles/Report.module.css
+++ b/front/src/styles/Report.module.css
@@ -207,8 +207,9 @@
 }
 
 .dataReportContainer h3.smaller {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
+  margin-bottom: 5px;
 }
 
 .containsTooltip {
