--- a/front/src/styles/NGramsTable.module.css
+++ b/front/src/styles/NGramsTable.module.css
@@ -39,6 +39,10 @@
 }
 
 .nGramsTableContainer table tbody tr:nth-child(odd) td {
+  cursor: pointer;
+}
+
+.nGramsTableContainer table tbody tr td:last-child {
   background-color: var(--row-alt, #fbfcfd) !important;
 }
 
@@ -55,7 +59,7 @@
   border: 1px solid transparent;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
   white-space: nowrap;
-  /* cursor: pointer; */
+  cursor: pointer;
 }
 
 .pill>span {
@@ -107,4 +111,8 @@
   color: hsl(218, 15%, 30%);
   background: hsl(0, 0%, 98%);
   border-color: hsl(218, 15%, 85%);
+}
+
+.hplt {
+  text-transform: uppercase;
 }
