--- a/front/src/styles/Footer.module.css
+++ b/front/src/styles/Footer.module.css
@@ -9,7 +9,7 @@
 }
 
 .horizon-logo {
-  margin: -15px 0 10px 0;
+  margin: 0px 0 0px 0;
 }
 
 .twitter-icon-footer {
@@ -61,8 +61,19 @@
   color: inherit;
 }
 
+.logosLeft {
+  display: flex;
+  align-items: flex-end;
+}
+
+.ukriLogoCont {
+  width: 140px;
+  margin-left: 10px;
+}
+
 .ukri-logo {
-  margin: 0 0 10px 15px;
+  width: 100%;
+  height: 15%;
 }
 
 .visitor-count p {
@@ -73,6 +84,7 @@
   .footer {
     margin: 60px 0 30px 0;
   }
+
 }
 
 @media (max-width: 768px) {
@@ -98,10 +110,13 @@
   .eu-flag {
     margin-top: 0px;
   }
+
+
 }
 
 @media (max-width: 541px) {
   .footer {
     margin: 30px 0;
   }
+
 }
